--- a/cash.html
+++ b/cash.html
@@ -138,7 +138,8 @@
                                 <td class="light bod-right" width="15%"> 
                                     <strong>Date of Birth</strong> <br>出生日期:            
                                 </td>
-                                <td class=" bod-right right-align" valign="middle" style="padding-top: 5px;" width="30%">
+                                <td class=" bod-right right-align" valign="middle" style="padding-top: 5px; display: flex;
+                                width: 94.5%; justify-content: center; align-items: center;" width="30%">
                                   <strong>{{account_info.dob}}</strong>
                                   <div class="right-align">(日/月/年) <br>(dd/mm/yyyy)</div>
                                 </td>
@@ -225,12 +226,6 @@
                                     <table width="100%">
                                         <tr>
                                             <td class="bod-bottom"><strong>{{account_info.address}}</strong></td>
-                                        </tr>
-                                        <tr>
-                                            <td class="bod-bottom" style="padding-top: 15px;" ><!--<strong> </strong>--></td> 
-                                        </tr>
-                                        <tr>
-                                            <td class="bod-bottom">&nbsp;</td> 
                                         </tr>
                                     </table>
                                     
