--- a/margin.html
+++ b/margin.html
@@ -137,7 +137,8 @@
                                 <td class="light-p bod-right" width="15%"> 
                                     <strong>Date of Birth</strong> <br>出生日期:            
                                 </td>
-                                <td class=" bod-right right-align" width="30%" valign="middle" style="padding-top: 10px;">
+                                <td class=" bod-right right-align" width="30%" valign="middle" style="padding-top: 10px; display: flex;
+                                width: 94.5%; justify-content: center; align-items: center;">
                                   <strong>{{account_info.dob}}</strong>
                                   <div class="right-align">(日/月/年) <br>(dd/mm/yyyy)</div>
                                 </td>
@@ -226,16 +227,6 @@
                                         <tr>
                                             <td class="bod-bottom"><strong>{{account_info.address}}</strong></td>
                                         </tr>
-                                        <tr>
-                                            <td class="bod-bottom" ><!--<strong> </strong>--></td> 
-                                        </tr>
-
-                                        
-                                        <tr>
-                                            <td class="bod-bottom">&nbsp;</td> 
-                                        </tr>
-
-
                                     </table>
                                     
                                 </td>
