--- a/cash.html
+++ b/cash.html
@@ -139,7 +139,7 @@
                                     <strong>Date of Birth</strong> <br>出生日期:            
                                 </td>
                                 <td class=" bod-right right-align" valign="middle" style="padding-top: 5px; display: flex;
-                                width: 94.5%; justify-content: center; align-items: center;" width="30%">
+                                justify-content: center; align-items: center;" width="30%">
                                   <strong>{{account_info.dob}}</strong>
                                   <div class="right-align">(日/月/年) <br>(dd/mm/yyyy)</div>
                                 </td>
