--- a/margin.html
+++ b/margin.html
@@ -138,7 +138,7 @@
                                     <strong>Date of Birth</strong> <br>出生日期:            
                                 </td>
                                 <td class=" bod-right right-align" width="30%" valign="middle" style="padding-top: 10px; display: flex;
-                                width: 94.5%; justify-content: center; align-items: center;">
+                                justify-content: center; align-items: center;">
                                   <strong>{{account_info.dob}}</strong>
                                   <div class="right-align">(日/月/年) <br>(dd/mm/yyyy)</div>
                                 </td>
