--- a/margin.html
+++ b/margin.html
@@ -137,10 +137,11 @@
                                 <td class="light-p bod-right" width="15%"> 
                                     <strong>Date of Birth</strong> <br>出生日期:            
                                 </td>
-                                <td class=" bod-right right-align" width="30%" valign="middle" style="padding-top: 10px; display: flex;
-                                justify-content: center; align-items: center;">
+                                <td width="30%" valign="middle" style="padding: 10px 0 0 15px">
                                   <strong>{{account_info.dob}}</strong>
-                                  <div class="right-align">(日/月/年) <br>(dd/mm/yyyy)</div>
+                                </td>
+                                <td class=" bod-right">
+                                  <div>(日/月/年) <br>(dd/mm/yyyy)</div>
                                 </td>
                                 <td class="light-p bod-right" width="25%">
                                     <strong>Place of Birth</strong><br>
