--- a/cash.html
+++ b/cash.html
@@ -138,10 +138,11 @@
                                 <td class="light bod-right" width="15%"> 
                                     <strong>Date of Birth</strong> <br>出生日期:            
                                 </td>
-                                <td class=" bod-right right-align" valign="middle" style="padding-top: 5px; display: flex;
-                                justify-content: center; align-items: center;" width="30%">
+                                <td valign="middle" style="padding-top: 5px;" width="30%">
                                   <strong>{{account_info.dob}}</strong>
-                                  <div class="right-align">(日/月/年) <br>(dd/mm/yyyy)</div>
+                                </td>
+                                <td class=" bod-right" style="padding-top: 5px ; padding-left: 15px;">
+                                  <div>(日/月/年) <br>(dd/mm/yyyy)</div>
                                 </td>
                                 <td class="light bod-right" width="25%">
                                     <strong>Place of Birth</strong><br>
