--- a/cash.html
+++ b/cash.html
@@ -1242,7 +1242,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
         </div>
         <div class="linespace1-5 pad mt-50">
             <p>Executed as a deed on 簽訂作契約於: <span class="bod-bottom" style="width: 50%; display: inline-block;">
-                <strong>{{account_info.create_time}}</strong>
+                <strong>{{account.create_date}}</strong>
             </span>			(insert date 請填上日期)</p>
             <p>Signed and delivered by: 簽署、蓋印及交付：</p>
         </div>
@@ -1311,7 +1311,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
                 <td width="10%"></td>
                 <td width="30%">
                     <div class="bod-bottom">
-                        <strong>{{account_info.create_time}}</strong>
+                        <strong>{{account.create_date}}</strong>
                     </div>
                     Date 日期
                 </td>
