--- a/margin.html
+++ b/margin.html
@@ -3153,18 +3153,18 @@ disclosure statement
                                
                             </td>
                             <td width="35%">
-                                <span class="bod-bottom m-width d-in" style="width: 100%;">
+                                <span class="bod-bottom m-width d-in" style="width: 100%; margin-top: 25px;">
                                     <!--<strong>XXXXXXX</strong> -->
                                 </span> 
-                                <p>合規部人員姓名: <br>日期:</p>
+                                <p style="margin-top: 10px;">合規部人員姓名: <br>日期:</p>
                             </td>
                         </tr>
 
                     </table>
                     <p class="mt-10">如屬高風險，由負責人員加簽:
                     </p>
-                    <p class="bod-bottom m-width d-in" >
-                        <!--<strong>XXXXXXX</strong> -->
+                    <p class="bod-bottom m-width d-in" style="margin-top: 25px;" >
+                        <!-- <strong>XXXXXXX</strong> -->
                     </p> <br>負責人員姓名: <br>
                     日期:
                 </td>
