--- a/margin.html
+++ b/margin.html
@@ -2562,23 +2562,16 @@ disclosure statement
 </div>
 <br>
 <div style="display: flex;">
-    <span style="width: 80%;">strong U.S. Tax Withholding and Reporting FATCA Return Sheet</span>
-    <div style="display: flex; width: 700px;margin-left: 100px;">
+    <span style="width: 410px;">strong U.S. Tax Withholding and Reporting FATCA Return Sheet</span>
+    <div style="display: flex; width: 330px;margin-left: 100px;">
         <span>日期(月/日/年): </span> <span style="margin-left: 5px;" class="bod-bottom  d-in m-width" >
             <strong >{{account.create_date}}</strong>
         </span>
     </div>
-    <!-- strong U.S. Tax Withholding and Reporting FATCA Return Sheet 
-    <div class="right "> 
-        <span class="d-in">日期(月/日/年) : <span class="bod-bottom  d-in m-width" >
-        <strong>XXXXXXXX</strong>
-   </div>
-   <div class="clear"></div>
-</div> -->
 </div>
 <div style="display: flex; margin-top: 10px;">
-    <span style="width: 80%;"><美國賬戶稅務合規法案>回覆便條</span>
-    <div style="display: flex; width: 700px;margin-left: 100px;"> 
+    <span style="width: 410px;"><美國賬戶稅務合規法案>回覆便條</span>
+    <div style="display: flex; width: 330px;margin-left: 100px;"> 
         <span class="d-in">Date (MM/DD/YY) : </span><span style="margin-left: 5px;" class="bod-bottom  d-in m-width" >
         <strong>{{account.create_date}}</strong>
         </span>
