--- a/margin.html
+++ b/margin.html
@@ -2562,7 +2562,7 @@ disclosure statement
 </div>
 <br>
 <div style="display: flex;">
-    <span style="width: 410px;">strong U.S. Tax Withholding and Reporting FATCA Return Sheet</span>
+    <span style="width: 410">strong U.S. Tax Withholding and Reporting FATCA Return Sheet</span>
     <div style="display: flex; width: 330px;margin-left: 100px;">
         <span>日期(月/日/年): </span> <span style="margin-left: 5px;" class="bod-bottom  d-in m-width" >
             <strong >{{account.create_date}}</strong>
@@ -2570,8 +2570,8 @@ disclosure statement
     </div>
 </div>
 <div style="display: flex; margin-top: 10px;">
-    <span style="width: 410px;"><美國賬戶稅務合規法案>回覆便條</span>
-    <div style="display: flex; width: 330px;margin-left: 100px;"> 
+    <span style="width: 410"><美國賬戶稅務合規法案>回覆便條</span>
+    <div style="display: flex; width: 330px;margin-left: 287px;"> 
         <span class="d-in">Date (MM/DD/YY) : </span><span style="margin-left: 5px;" class="bod-bottom  d-in m-width" >
         <strong>{{account.create_date}}</strong>
         </span>
