--- a/margin.html
+++ b/margin.html
@@ -2571,13 +2571,13 @@ disclosure statement
 
 
 <div style="margin-top: 10px;"><美國賬戶稅務合規法案>回覆便條
-    <div class="right "> 
+    <div class="right" style="margin-right: 124px"> 
         <span class="d-in">Date (MM/DD/YY) : <span class="bod-bottom  d-in m-width" >
-        <strong>{{account.create}}</strong>
+        <strong>{{account.create_date}}</strong>
         </span></span>
    </div>
 </div>
-<br>
+<br><br>
 <p>
     Please complete and sign this form. And provide the following documentation(s) to :</p>
     <p>請填寫並簽署此表格，連同以下所需文件一併交回:</p>
@@ -2586,14 +2586,15 @@ disclosure statement
     <p>利盟證券有限公司</p>
     <p>香港干諾道西 35-36 號康諾維港大廈 9 樓
 </p>
+<br>
 <p class="mt-15">To : Grand Partners Securities Limited</p>
 <p>致 : 利盟證券有限公司</p>
+<br>
 <table width="100%" border="1" class="table mt-20">
     <tr>
         <td class="thbg" colspan="2">
             Account Information 戶口資料
         </td>
-
     </tr>
     <tr>
         <td width="30%" class="bod-right0">
