--- a/cash.html
+++ b/cash.html
@@ -1978,17 +1978,17 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
         <div class="mt-15">U.S. Tax Withholding and Reporting FATCA Return Sheet 
             <div class="right "> 
                 <span class="d-in">日期(月/日/年) : <span class="bod-bottom  d-in m-width" >
-                <!--<strong>XXXXXXXX</strong>-->
+                <strong>{{account.create_date}}</strong>
                 </span></span>
            </div>
            <div class="clear"></div>
         </div>
 
         
-        <div><美國賬戶稅務合規法案>回覆便條
-            <div class="right "> 
+        <div style="margin-top: 10px;"><美國賬戶稅務合規法案>回覆便條
+            <div class="right" style="margin-right: 124px"> 
                 <span class="d-in">Date (MM/DD/YY) : <span class="bod-bottom  d-in m-width" >
-                <!--<strong>XXXXXXXX</strong>-->
+                <strong>{{account.create_date}}</strong>
                 </span></span>
            </div>
         </div>
@@ -2117,7 +2117,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
         <div class="bod pad mt-20">
             <p>Signature of Customer 客戶簽署</p>
 
-            <p class="mt-15">X &nbsp;  &nbsp;  &nbsp; <span class="bod-bottom m-width d-in" >
+            <p class="mt-50">X &nbsp;  &nbsp;  &nbsp; <span class="bod-bottom m-width d-in" >
                 <!--<strong>XXXXXXXX</strong> -->
             </span>
             </p>
