--- a/margin.html
+++ b/margin.html
@@ -2373,7 +2373,7 @@ disclosure statement
                 <strong>XXXXXXXX</strong>
             </div> -->
 
-            <span class="bod-bottom m-width d-in" >
+            <span class="m-width d-in" >
                <!-- <strong>XXXXXXX</strong>  -->
             </span> 
         </td>
@@ -2381,48 +2381,48 @@ disclosure statement
     
     <tr>
         <td  width="60%">
-            ONLINE TRADING LIMIT APPROVED BY : &nbsp;   &nbsp;  &nbsp; <span class="bod-bottom m-width d-in" >
+            ONLINE TRADING LIMIT APPROVED BY : &nbsp;   &nbsp;  &nbsp; <span class="m-width d-in" >
                 <!-- <strong>XXXXXXX</strong>  -->
              </span> 
         </td>
         <td  >
-            Date :   <span class="bod-bottom m-width d-in" >
-                <!-- <strong>XXXXXXX</strong>  -->
-             </span> 
-        </td>
-    </tr>
-    <tr>
-        <td  >
-            SIGNATURE VERIFIED BY : &nbsp;   &nbsp;  &nbsp; <span class="bod-bottom m-width d-in" >
-                <!-- <strong>XXXXXXX</strong>  -->
-             </span> 
-        </td>
-        <td  >
-            Date :  <span class="bod-bottom m-width d-in" >
+            Date :   <span class=" m-width d-in" >
                 <!-- <strong>XXXXXXX</strong>  -->
              </span> 
         </td>
     </tr>
     <tr>
         <td  >
-            CHECKED BY : &nbsp;   &nbsp;  &nbsp; <span class="bod-bottom m-width d-in" >
+            SIGNATURE VERIFIED BY : &nbsp;   &nbsp;  &nbsp; <span class="m-width d-in" >
                 <!-- <strong>XXXXXXX</strong>  -->
              </span> 
         </td>
         <td  >
-            Date : &nbsp;   &nbsp;  &nbsp; <span class="bod-bottom m-width d-in" >
+            Date :  <span class="m-width d-in" >
                 <!-- <strong>XXXXXXX</strong>  -->
              </span> 
         </td>
     </tr>
     <tr>
         <td  >
-            AE SIGNATURE &nbsp;   &nbsp;  &nbsp; <span class="bod-bottom m-width d-in" >
+            CHECKED BY : &nbsp;   &nbsp;  &nbsp; <span class="m-width d-in" >
                 <!-- <strong>XXXXXXX</strong>  -->
              </span> 
         </td>
         <td  >
-            Date :&nbsp;   &nbsp;  &nbsp;  <span class="bod-bottom m-width d-in" >
+            Date : &nbsp;   &nbsp;  &nbsp; <span class="m-width d-in" >
+                <!-- <strong>XXXXXXX</strong>  -->
+             </span> 
+        </td>
+    </tr>
+    <tr>
+        <td  >
+            AE SIGNATURE &nbsp;   &nbsp;  &nbsp; <span class="m-width d-in" >
+                <!-- <strong>XXXXXXX</strong>  -->
+             </span> 
+        </td>
+        <td  >
+            Date :&nbsp;   &nbsp;  &nbsp;  <span class="m-width d-in" >
                 <!-- <strong>XXXXXXX</strong>  -->
              </span> 
         </td>
