--- a/cash.html
+++ b/cash.html
@@ -1547,7 +1547,7 @@ to receive payments (if any) to the Applicant in accordance with the Documents.
         
         <div class="clear pad mt-20" >
             參考編號：<span class="bod-bottom d-in  m-width">
-            <!--<strong>XXXXXXXX</strong>-->
+            <strong>{{account_info.id}}</strong>
         </span>
         </div>
         <div class="mt-15">
