--- a/margin.html
+++ b/margin.html
@@ -1651,7 +1651,7 @@ opinion if I so wish. <br>
         
         <div class="clear pad mt-20" >
             參考編號：<span class="bod-bottom d-in  m-width">
-            <!--<strong>XXXXXXXX</strong>-->
+            <strong>{{account_info.id}}</strong>
         </span>
         </div>
         <div class="mt-20">
