--- a/cash.html
+++ b/cash.html
@@ -3307,7 +3307,7 @@ disclosure statement
                 </div>
             </div>
             
-            <!-- <div class="clear break-after"></div> -->
+            <div class="clear"></div>
         </div>
            <!--page13-->
     </div>
