new-pages-added

--- a/cash.html
+++ b/cash.html
@@ -3307,8 +3307,8 @@ disclosure statement
                 </div>
             </div>
             
-            <div class="clear"></div>
-            
+            <div class="clear break-after"></div>
+
         </div>
            <!--page13-->
     </div>
