--- a/margin.html
+++ b/margin.html
@@ -3656,7 +3656,7 @@ Reference Letter). <br>
                 </div>
             </div>
             
-            <div class="clear break-after"></div>
+            <div class="clear break-after" style="break-after: avoid;"></div>
         </div>
            <!--page15-->
     </div>
