new-pages-added

--- a/cash.html
+++ b/cash.html
@@ -3297,7 +3297,7 @@ disclosure statement
                     </tr>
                 </tbody>
             </table>
-            <div class="page-footer mt-20">          
+            <div class="page-footer mt-50" style="bottom: 0;">          
 
                 <div class="foot-right">
                     <span class="pt-15">(06/2017) </span>
@@ -3307,7 +3307,7 @@ disclosure statement
                 </div>
             </div>
             
-            <div class="clear break-after" style="break-after: avoid"></div>
+            <!-- <div class="clear break-after"></div> -->
 
         </div>
            <!--page13-->
