--- a/margin.html
+++ b/margin.html
@@ -3646,7 +3646,7 @@ Reference Letter). <br>
                     </tr>
                 </tbody>
             </table>
-            <!-- <div class="page-footer mt-20">          
+            <div class="page-footer mt-50" style="bottom: 0;">          
 
                 <div class="foot-right">
                     <span class="pt-15">(06/2017) </span>
@@ -3654,9 +3654,9 @@ Reference Letter). <br>
                         15
                     </div>
                 </div>
-            </div> -->
+            </div>
             
-            <div class="clear break-after"></div>
+            <!-- <div class="clear break-after"></div> -->
         </div>
            <!--page15-->
     </div>
