new-pages-added

--- a/margin.html
+++ b/margin.html
@@ -3646,7 +3646,7 @@ Reference Letter). <br>
                     </tr>
                 </tbody>
             </table>
-            <div class="page-footer mt-50" style="bottom: 0;">          
+            <div class="page-footer mt-50" style="bottom: -100px;">          
 
                 <div class="foot-right">
                     <span class="pt-15">(06/2017) </span>
