new-pages-added

--- a/margin.html
+++ b/margin.html
@@ -3496,10 +3496,10 @@ Reference Letter). <br>
             </div>
 
             <div width="30%" style="margin-top: 15px;">
-                <p>日期 Securities A/C Name: <span class="bod-bottom m-width d-in"><strong>{{account.id}}</strong></span></p>
+                <p>证券账户名称 Securities A/C Name: <span class="bod-bottom m-width d-in"><strong>{{account.id}}</strong></span></p>
             </div>
             <div width="30%" style="margin-top: 15px;">
-                <p>日期 A/C Name: <span class="bod-bottom m-width d-in"><strong>{{account_info.name_english}}</strong></span></p>
+                <p>帳戶名稱 A/C Name: <span class="bod-bottom m-width d-in"><strong>{{account_info.name_english}}</strong></span></p>
             </div>
             <div style="margin-top: 30px;">
                 <p>懇請貴公司在接獲本人/吾等/本公司之電話提款指示後:-</p>
@@ -3524,16 +3524,16 @@ Reference Letter). <br>
                 <tr>
                     <td width="35%">
                         <input type="checkbox" name="" id="HSBC">
-                        <label  for="HSBC">將款項 <br>&nbsp; &nbsp; &nbsp; &nbsp;  HSBC</label>
+                        <label  for="HSBC">匯豐銀行 <br>&nbsp; &nbsp; &nbsp; &nbsp;  HSBC</label>
                     </td>
                     <td class="pad0">
                         <table width="100%">
                             <tbody>
                                 <tr class="bod-bottom">
-                                    <td>AC No.</td>
+                                    <td>帳戶號碼 AC No.</td>
                                 </tr>
                                 <tr>
-                                    <td>AC Name</td>
+                                    <td>帳戶名稱 AC Name</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -3542,16 +3542,16 @@ Reference Letter). <br>
                 <tr>
                     <td width="35%">
                         <input type="checkbox" name="" id="bank_of_china">
-                        <label  for="bank_of_china">將款項 <br>&nbsp; &nbsp; &nbsp; &nbsp;  Bank of China</label>
+                        <label  for="bank_of_china">中國銀行（香港）<br>&nbsp; &nbsp; &nbsp; &nbsp;  Bank of China (HK)</label>
                     </td>
                     <td class="pad0">
                         <table width="100%">
                             <tbody>
                                 <tr class="bod-bottom">
-                                    <td>AC No.</td>
+                                    <td>帳戶號碼 AC No.</td>
                                 </tr>
                                 <tr>
-                                    <td>AC Name</td>
+                                    <td>帳戶名稱 AC Name</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -3560,16 +3560,16 @@ Reference Letter). <br>
                 <tr>
                     <td width="35%">
                         <input type="checkbox" name="" id="hang_seng_bank">
-                        <label  for="hang_seng_bank">將款項 <br>&nbsp; &nbsp; &nbsp; &nbsp;  Hang Seng China (HK)</label>
+                        <label  for="hang_seng_bank">恒生銀行<br>&nbsp; &nbsp; &nbsp; &nbsp;  Hang Seng Bank</label>
                     </td>
                     <td class="pad0">
                         <table width="100%">
                             <tbody>
                                 <tr class="bod-bottom">
-                                    <td>AC No.</td>
+                                    <td>帳戶號碼 AC No.</td>
                                 </tr>
                                 <tr>
-                                    <td>AC Name</td>
+                                    <td>帳戶名稱 AC Name</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -3578,16 +3578,16 @@ Reference Letter). <br>
                 <tr>
                     <td width="35%">
                         <input type="checkbox" name="" id="standard_chartered">
-                        <label  for="standard_chartered">將款項 <br>&nbsp; &nbsp; &nbsp; &nbsp;  Standard Chartered Bank</label>
+                        <label  for="standard_chartered">渣打銀行<br>&nbsp; &nbsp; &nbsp; &nbsp;  Standard Chartered Bank</label>
                     </td>
                     <td class="pad0">
                         <table width="100%">
                             <tbody>
                                 <tr class="bod-bottom">
-                                    <td>AC No.</td>
+                                    <td>帳戶號碼 AC No.</td>
                                 </tr>
                                 <tr>
-                                    <td>AC Name</td>
+                                    <td>帳戶名稱 AC Name</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -3596,16 +3596,16 @@ Reference Letter). <br>
                 <tr>
                     <td width="35%">
                         <input type="checkbox" name="" id="other_bank">
-                        <label  for="other_bank">將款項 Other Bank Name<br>&nbsp; &nbsp; &nbsp; &nbsp;  將款項將款項</label>
+                        <label  for="other_bank">其他銀行 Other Bank Name<br>&nbsp; &nbsp; &nbsp; &nbsp;  銀行名稱</label>
                     </td>
                     <td class="pad0">
                         <table width="100%">
                             <tbody>
                                 <tr class="bod-bottom">
-                                    <td>AC No. <strong style="margin-left: 10px">{{account_info.bank_account_number}}</strong></td>
+                                    <td>帳戶號碼 AC No. <strong style="margin-left: 10px">{{account_info.bank_account_number}}</strong></td>
                                 </tr>
                                 <tr>
-                                    <td>AC Name <strong style="margin-left: 10px">{{account_info.bank_name}}</strong></td>
+                                    <td>帳戶名稱 AC Name <strong style="margin-left: 10px">{{account_info.bank_name}}</strong></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -3631,7 +3631,7 @@ Reference Letter). <br>
             <table width="100%" class="mt-50" style="margin-top: 120px;">
                 <tbody>
                     <tr>
-                        <td width="70%" >adasd</td>
+                        <td width="70%" >客户签名</td>
                         <td width="100%" >adasd</td>
                     </tr>
                     <tr>
