--- a/margin.html
+++ b/margin.html
@@ -3631,8 +3631,8 @@ Reference Letter). <br>
             <table width="100%" class="mt-50" style="margin-top: 120px;">
                 <tbody>
                     <tr>
-                        <td width="70%" >客户签名</td>
-                        <td width="100%" >adasd</td>
+                        <td width="70%" >客戶簽署</td>
+                        <td width="100%" >負責人批簽</td>
                     </tr>
                     <tr>
                         <td>Client's Specimen Signature(s)</td>
@@ -3646,7 +3646,7 @@ Reference Letter). <br>
                     </tr>
                 </tbody>
             </table>
-            <div class="page-footer mt-50" style="bottom: -100px;">          
+            <div class="page-footer mt-50" style="bottom: -500px;">          
 
                 <div class="foot-right">
                     <span class="pt-15">(06/2017) </span>
