--- a/cash.html
+++ b/cash.html
@@ -2990,12 +2990,14 @@ disclosure statement
                 <h3>申請[中華通北向交易服務]</h3>
             </div>
             &nbsp;
+            <br>
             <p>確認和同意：</p>
             <p>
                 本人/吾等確認本人/吾等已閱讀並了解利盟證券有限公司（「利盟證券」）的個人資料收 集聲明的
 內容。通過勾選下面的方框，本人/吾等表示本人/吾等同意利盟證券根據個人信息收集聲明 中的條
 款和目的使用本人/吾等之個人資料。
             </p>
+            <br>
             <div style="padding-top:3vw;" class="mini">
                 <input type="checkbox" id="check" class="_not_checked" />
                 <label for="check">本人/吾等同意利盟證券將本人/吾等之個人資料用於個人資料收集聲明所載的目的。</label>
@@ -3004,16 +3006,16 @@ disclosure statement
             &nbsp;
             <div class="col">
                 <label for="type1">客戶簽名 ：</label>
-                <input type="text" name="" id="type1"  class="btmu" size="40" autocomplete>
+                <input type="text" name="" id="type1"  class="btmu" size="60" autocomplete>
                 <br>
                 <label for="type2">客戶名稱 ：</label>
-                <input type="text" name="" id="type2"  class="btmu" size="40" autocomplete>
+                <input type="text" name="" id="type2"  class="btmu" size="60" autocomplete>
                 <br>
                 <label for="type3">戶口號碼 ：</label>
-                <input type="text" name="" id="type3"  class="btmu" size="40" autocomplete>
+                <input type="text" name="" id="type3"  class="btmu" size="60" autocomplete>
                 <br>
-                <label for="type4">日期 <span style="margin-left: 5vw;">:</span></label>
-                <input style="margin-left: 1.7vw;" type="text" name="" id="type4"  class="btmu" size="40" autocomplete>      
+                <label for="type4">日期 <span  style="margin-left: 28px;"">:</span></label>
+                <input style="margin-left: 10px;" type="text" name="" id="type4"  class="btmu" size="60" autocomplete>      
             </div>
             <p style="padding-top:25px;">
                 備注： 個人信息收集聲明關於中華通北向交易
