--- a/margin.html
+++ b/margin.html
@@ -3354,7 +3354,7 @@ Reference Letter). <br>
             </table>
             <div class="clear"></div>
     
-            <div class="page-footer">
+            <div class="page-footer mt-50" style="bottom: -495px;">
     
                 <div class="foot-right">
                     <span class="pt-15">(06/2017) </span>
@@ -3642,8 +3642,8 @@ Reference Letter). <br>
 
                     </tr>
                     <tr>
-                        <td><span class="bod-bottom  d-in mt-50" style="min-width: 220px; margin-top: 60px;"></span></td>
-                        <td><span class="bod-bottom  d-in mt-50" style="min-width: 220px; margin-top: 60px;"></span></td>
+                        <td><span class="bod-bottom  d-in mt-50" style="min-width: 220px; margin-top: 100px;"></span></td>
+                        <td><span class="bod-bottom  d-in mt-50" style="min-width: 220px; margin-top: 100px;"></span></td>
 
                     </tr>
                 </tbody>
