--- a/margin.html
+++ b/margin.html
@@ -2281,26 +2281,28 @@ disclosure statement
                     Tel : (852) 3701 3200 Fax : (852) 3102 1855</p>
             </div>
         </div>
+        <br><br>
 <p class="linespace1-5 mt-15">
     To : Grand Partners Securities Limited<br>
     致 : 利盟證券有限公司
 </p>
-<p class="text-center linespace1-5">
-    <strong><u>Request Service for Electronic-Trading Function</u></strong><br>
-    <strong><u>要求加設電子交易功能服務</u></strong>
-</p>
+<br><br>
+<div class="linespace1-5">
+    <h2 class="mini-container"><u>Request Service for Electronic-Trading Function</u></h2>
+    <h2 class="mini-container"><u>要求加設電子交易功能服務</u></h2>
+</div>
 
-
+<br><br>
 <table width='100%' class='table mt-20'>
     <tr>
-        <td width="50%">Account Number <br> 帳戶號碼 :<span class="bod-bottom m-width d-in" style="position: relative;">
+        <td width="70%">Account Number <br> 帳戶號碼 :<span class="bod-bottom m-width d-in" style="position: relative;">
             <strong style="position: absolute; top: -15px; left: 50%; transform: translateX(-50%);">
                 {{account.id}}
             </strong>
             </span> 
         </td>
         
-        <td width="50%">Account Name <br> 帳戶名稱 :  <span class="bod-bottom m-width d-in" >
+        <td width="30%">Account Name <br> 帳戶名稱 :  <span class="bod-bottom m-width d-in" >
             <strong>{{account_info.name_chinese}}</strong>
             </span> 
         </td>
@@ -2319,13 +2321,15 @@ disclosure statement
     bear any and all risks involved with all trades or transactions entered via electronic trading system and carried out through
     your system.
 </p>
+<br>
 <p class="mt-15 linespace1-5">此要求加設電子交易功能服務是附屬利盟證券有限公司及本人 / 吾等簽訂的現金 / 保證金客戶協議。作為現金 / 保證金客戶協議的補充。
     此要求加設電子交易功能服務，被利盟證券有限公司接受則成為雙方協議書。利盟證券有限公司同意 向本人 / 吾等提供電子證券交易服
     務 (以下稱電子證券或以手提電話交易服務) 以便本人/ 吾等可透過互聯網絡發出電子指示，並取得報價和其他資訊。若加設電子交易功能
     服務的條款，與現金 / 保證金客戶協議的條文有任何衝突，概以後者的條文為準。
-    </p>
+    </p><br>
     <p class="linespace1-5">電子交易的設施 (互聯網) 以電腦組成的系統來進行買賣傳遞。然而，所有設施及系統都有可能暫時中斷或失靈。本人明白到通過電子交易
         系統發出指示以及通過 貴公司的系統執行的交易渉及各種風險。本人並同意承擔該等風險。</p>
+        <br>
 <p class="linespace1-5">Password Collection 收取密碼方式 :</p>
 <p class="mt-20">
     <input type="checkbox" id="Byemail" class="{{account_info.password_collection_by_email_yesno_checkbox_class}}" />
