--- a/cash.html
+++ b/cash.html
@@ -2841,12 +2841,12 @@ disclosure statement
    <br><br>
    <table width='100%' class='table mt-20'>
        <tr>
-           <td width="70%">Account Number <br> 帳戶號碼 :<span class="bod-bottom m-width d-in" >
+           <td width="65%">Account Number <br> 帳戶號碼 :<span class="bod-bottom m-width d-in" >
                <strong>{{account_info.id}}</strong>
                </span> 
            </td>
            
-           <td width="30%"">Account Name <br> 帳戶名稱 :  <span class="bod-bottom m-width d-in" >
+           <td width="35%"">Account Name <br> 帳戶名稱 :  <span style="min-width: 70% ;" class="bod-bottom m-width d-in" >
                <strong>{{account_info.name_chinese}}</strong>
                </span> 
            </td>
