--- a/margin.html
+++ b/margin.html
@@ -2295,14 +2295,14 @@ disclosure statement
 <br><br>
 <table width='100%' class='table mt-20'>
     <tr>
-        <td width="70%">Account Number <br> 帳戶號碼 :<span class="bod-bottom m-width d-in" style="position: relative;">
+        <td width="65%">Account Number <br> 帳戶號碼 :<span class="bod-bottom m-width d-in" style="position: relative;">
             <strong style="position: absolute; top: -15px; left: 50%; transform: translateX(-50%);">
                 {{account.id}}
             </strong>
             </span> 
         </td>
         
-        <td width="30%">Account Name <br> 帳戶名稱 :  <span class="bod-bottom m-width d-in" >
+        <td width="35%">Account Name <br> 帳戶名稱 :  <span style="min-width: 70%;" class="bod-bottom m-width d-in" >
             <strong>{{account_info.name_chinese}}</strong>
             </span> 
         </td>
