--- a/cash.html
+++ b/cash.html
@@ -3081,10 +3081,16 @@ disclosure statement
                 您的交易指令或向您提供利盟證券的[中華通北向交易服務]。                
             </p>
             
-            <div style="float:right; width:5vw" class="light pad">
-                12
+            <div class="page-footer mt-20">
+       
+                <div class="foot-right">
+                    <span class="pt-15">(06/2017) </span>
+                    <div class="light pad">
+                        12
+                    </div>
+                </div>
             </div>
-            <div class="clear break-after"></div>
+            <div class="clear page-break"></div>  
            </div>
            <!--page12-->
            <div class="container">
