--- a/cash.html
+++ b/cash.html
@@ -3086,14 +3086,14 @@ disclosure statement
                 <div class="foot-right">
                     <span class="pt-15">(06/2017) </span>
                     <div class="light pad">
-                        12
+                        1
                     </div>
                 </div>
             </div>
             <div class="clear page-break"></div>  
            </div>
            <!--page12-->
-           <div class="container">
+           <div class="container  pb85">
             <div class="header mt-20">
                 <div class="head-left">
                     <img src="images/logo.jpg" alt="logo">
