--- a/margin.html
+++ b/margin.html
@@ -708,9 +708,9 @@
         <div class="page-footer">
             Grand Partners Securities Limited Cash Account - Individual Account Opening Form 
 
-            <div class="foot-right" style="display: flex;">
-                <div style="width: 100px" class="pt-15">(06/2017) </div>
-                <div style="width: 200px;" class="light-p pad">
+            <div class="foot-right">
+                <span class="pt-15">(06/2017) </span>
+                <div class="light-p pad">
                     1
                 </div>
             </div>
