--- a/margin.html
+++ b/margin.html
@@ -710,7 +710,7 @@
 
             <div class="foot-right">
                 <span class="pt-15">(06/2017) </span>
-                <div class="light-p pad">
+                <div class="light-p pad" style="float: right;width: 50%;">
                     1
                 </div>
             </div>
